--- a/distribuidores.html
+++ b/distribuidores.html
@@ -163,15 +163,23 @@
             <li><a href="contacto.html">Contacto</a></li>
           </ul>
           <div class="dropdown" style="top: -20px;">
-            <button class="dropbtn"><img src="imagenes/flags/spain.png" alt="Topciment Spanish Web" Title="Topciment Spanish Web"></button>
+            <button class="dropbtn"><img src="imagenes/flags/spain.png" alt="Topciment Spanish Web"
+                Title="Topciment Spanish Web"></button>
             <div class="dropdown-content">
-              <a href="https://www.topciment.com/en/"> <img src="imagenes/flags/united-kingdom.png" alt="Topciment english web" Title="Topciment english web"> </a>
-              <a href="https://www.topciment.com/fr/"><img src="imagenes/flags/france.png" alt="Topciment french web" Title="Topciment french web"></a>
-              <a href="https://www.topciment.com/de/"><img src="imagenes/flags/germany.png" alt="Topciment germany web" Title="Topciment germany web"></a>
-              <a href="https://www.topciment.com/it/"><img src="imagenes/flags/italy.png" alt="Topciment italian web" title="Topciment italian web"></a>
-              <a href="https://www.topciment.com/nl/"><img src="imagenes/flags/netherlands.png" alt="Topciment dutch web" title="Topciment dutch web"></a>
-              <a href="https://www.topciment.com/gr/"><img src="imagenes/flags/greece.png" alt="Topciment greek web" title="Topciment greek web"></a>
-              <a class="ultimo" href="https://www.topciment.ru/"><img src="imagenes/flags/russia.png" alt="Topciment russian web" title="Topciment russian web"></a>
+              <a href="https://www.topciment.com/en/"> <img src="imagenes/flags/united-kingdom.png"
+                  alt="Topciment english web" Title="Topciment english web"> </a>
+              <a href="https://www.topciment.com/fr/"><img src="imagenes/flags/france.png" alt="Topciment french web"
+                  Title="Topciment french web"></a>
+              <a href="https://www.topciment.com/de/"><img src="imagenes/flags/germany.png" alt="Topciment germany web"
+                  Title="Topciment germany web"></a>
+              <a href="https://www.topciment.com/it/"><img src="imagenes/flags/italy.png" alt="Topciment italian web"
+                  title="Topciment italian web"></a>
+              <a href="https://www.topciment.com/nl/"><img src="imagenes/flags/netherlands.png"
+                  alt="Topciment dutch web" title="Topciment dutch web"></a>
+              <a href="https://www.topciment.com/gr/"><img src="imagenes/flags/greece.png" alt="Topciment greek web"
+                  title="Topciment greek web"></a>
+              <a class="ultimo" href="https://www.topciment.ru/"><img src="imagenes/flags/russia.png"
+                  alt="Topciment russian web" title="Topciment russian web"></a>
             </div>
           </div>
         </div>
@@ -340,7 +348,8 @@
           </h2>
           <h3 data-animate-scroll='{"x": "-100","y": "0","alpha": "0","duration": "1"}'>Cursos de formación en las
             instalaciones del distribuidor en península.</h3>
-          <p>En Topciment ofrecemos asesoramiento continuo a nuestros distribuidores. Realizamos <a class="links" href="profesionales/cursos-aplicacion-microcemento.html">cursos de microcecemento</a>
+          <p>En Topciment ofrecemos asesoramiento continuo a nuestros distribuidores. Realizamos <a class="links"
+              href="profesionales/cursos-aplicacion-microcemento.html">cursos de microcecemento</a>
             en los puntos de distribución para que los profesionales conozcan al detalle y en primera persona los
             procedimientos de aplicación del microcemento Topciment.</p>
           <p>Nuestros <strong>cursos homologados</strong>, con <strong>certificación experto</strong>, son impartidos
@@ -365,8 +374,9 @@
             producto minimizando el margen de error.</p>
           <h3 data-animate-scroll='{"x": "-100","y": "0","alpha": "0","duration": "1"}'> Experiencia en el sector</h3>
           <p>Topciment es una empresa especializada en la <a target="_blank"
-                      href="https://www.topciment.com/nosotros.html">fabricación de microcemento </a> con más de 15
-            años de experiencia. Ubicados en Valencia, nuestra red de distribuidores se extiende por todo el territorio nacional, así
+              href="https://www.topciment.com/nosotros.html">fabricación de microcemento </a> con más de 15
+            años de experiencia. Ubicados en Valencia, nuestra red de distribuidores se extiende por todo el territorio
+            nacional, así
             como en diferentes países como Alemania, Holanda, Portugal, Grecia, Reino Unido, etc.<br>
           </p>
           <p>La experiencia adquirida es una de nuestras mejores referencias. Disponemos de un equipo altamente
@@ -381,7 +391,9 @@
             zonas de confluencia con éstos, para que tú como distribuidor tengas preferencia.<br>
           </p>
           <p>Queremos establecer contigo alianzas duraderas en el tiempo para obtener el mejor beneficio mutuo.
-            Nosotros, como <a class="links" href="nosotros.html">fábrica de microcemento</a>, invertimos en nuestros procesos de producción, investigación y nuevos productos. Mientras que tu misión será la de facilitar en tiempo y espacio nuestros productos a los aplicadores.</p>
+            Nosotros, como <a class="links" href="nosotros.html">fábrica de microcemento</a>, invertimos en nuestros
+            procesos de producción, investigación y nuevos productos. Mientras que tu misión será la de facilitar en
+            tiempo y espacio nuestros productos a los aplicadores.</p>
         </div>
       </div>
     </div>
@@ -749,6 +761,7 @@ function PonerCookie(){
 }
 </script-->
   <script type='text/javascript' src='https://www.topciment.com/zcga.js'></script>
-<script type='text/javascript' src='https://www.topciment.com/js/cookies.js'></script></body>
+  <script type='text/javascript' src='https://www.topciment.com/js/cookies.js'></script>
+</body>
 
 </html>
