--- a/en/microcement.html
+++ b/en/microcement.html
@@ -197,7 +197,7 @@
            <li><a href="#tipos-de-microcemento">Types of Microcement</a></li>
            <li><a href="#ventajas">Advantages</a></li>
            <li><a href="#preguntas-frecuentes-ok">Frequent Questions</a></li>
-                  <li><a href="#microcement-colors">Microcement colors</a></li>
+           <li><a href="#microcement-colors">Microcement colors</a></li>
          </ul>
        </div>
 
@@ -395,18 +395,19 @@
                    microcement on the market with the most versatile products.</p>
                </div>
              </div>
-              <hr>
-            <div class="row">
-              <div class="col-md-5"> 
-                <a href="systems/unlimitted.html" target="_blank"><img
-                    class="imgmicro img-fluid" src="../imagenes/sistemas/logo_unlimitted_pagina_principal_92px_negro.png"
-                    alt="Logo Unlimitted microcemento bicomponente" title="Logo Unlimitted microcemento bicomponente"></a>
-              </div>
-              <div class="col-md-7">
-                <p class="mt-2"><strong style="color:#d9da23;"> UNLIMITTED</strong> è la nuova linea di microcemento
-                  bicomponente (cemento + resina)</p>
-              </div>
-            </div>
+             <hr>
+             <div class="row">
+               <div class="col-md-5">
+                 <a href="systems/unlimitted.html" target="_blank"><img class="imgmicro img-fluid"
+                     src="../imagenes/sistemas/logo_unlimitted_pagina_principal_92px_negro.png"
+                     alt="Logo Unlimitted microcemento bicomponente"
+                     title="Logo Unlimitted microcemento bicomponente"></a>
+               </div>
+               <div class="col-md-7">
+                 <p class="mt-2"><strong style="color:#d9da23;"> UNLIMITTED</strong> è la nuova linea di microcemento
+                   bicomponente (cemento + resina)</p>
+               </div>
+             </div>
              <hr>
              <div class="row">
                <div class="col-md-5">
@@ -434,17 +435,19 @@
                  </p>
                </div>
              </div>
-               <hr>
-            <div class="row">
-              <div class="col-md-5">
-                <a href="systems/atlanttic-microcement-for-pools.html" target="_blank"><img
-                    class="imgmicro img-fluid" src="../imagenes/sistemas/logo_atlanttic_pagina_principal_negro_92px.png"
-                    alt="Logo Atlanttic microcemento bicomponente" title="Logo Atlanttic microcmento bicomponente"></a>
-              </div>
-              <div class="col-md-7">
-                <p class="mt-2"><strong style="color:#4c86c3;">ATLANTTIC</strong> It is the range of microcement two-component  microcement (cement + resin) for swimming pools and for spaces in permanent contact with water.</p>
-              </div>
-            </div>
+             <hr>
+             <div class="row">
+               <div class="col-md-5">
+                 <a href="systems/atlanttic-microcement-for-pools.html" target="_blank"><img class="imgmicro img-fluid"
+                     src="../imagenes/sistemas/logo_atlanttic_pagina_principal_negro_92px.png"
+                     alt="Logo Atlanttic microcemento bicomponente" title="Logo Atlanttic microcmento bicomponente"></a>
+               </div>
+               <div class="col-md-7">
+                 <p class="mt-2"><strong style="color:#4c86c3;">ATLANTTIC</strong> It is the range of microcement
+                   two-component microcement (cement + resin) for swimming pools and for spaces in permanent contact
+                   with water.</p>
+               </div>
+             </div>
              <hr>
              <div class="row">
                <div class="col-md-5">
