--- a/noticias-microcemento/marca-registrada-en-china-rusia.html
+++ b/noticias-microcemento/marca-registrada-en-china-rusia.html
@@ -298,7 +298,7 @@
                                     </p>
 
                                     <p>El registro de nuestra marca en distintos países es importante porque nos permite
-                                        <strong>limitar las vulneraciones de plagio de producl,tos y evitar que factores
+                                        <strong>limitar las vulneraciones de plagio de productos y evitar que factores
                                             externos a nuestra compañía se aprovechen de nuestra reputación.</strong>
                                     </p>
                                     <p>Todo esto otorga confianza a nuestros clientes, un aspecto fundamental para
