--- a/sistemas/topsealer-barniz.html
+++ b/sistemas/topsealer-barniz.html
@@ -30,9 +30,9 @@
 	<link rel="stylesheet" type="text/css" href="../css/restyle.css">
 	<script type='text/javascript' src='../js/mycode.js'></script>
 	<!-- End new styles -->
-	<title>Barniz para la protección de superficies </title>
+	<title>Barnices para la protección de superficies | Barniz poliuretano</title>
 	<meta name="description"
-		content="Topsealer es el barniz de Topciment diseñado para la protección de superficies y para crear espacios antideslizantes e impermeables. " />
+		content="El barniz poliuretano Topsealer ofrece una protección superior. Barnices de elevadas resistencias a:abrasión, rayado, manchas y luz solar." />
 
 	<link rel="canonical" href="https://www.topciment.com/sistemas/topsealer-barniz.html" />
 	<link rel="alternate" href="https://www.topciment.com/en/systems/topsealer-varnishes.html" hreflang="en-GB" />
@@ -291,7 +291,7 @@
 	<div id="main">
 		<div class="clearfix">
 			<div id="content">
-				<section id="up">
+				<section id="up"> 
 					<div class="fullscreen background parallax"
 						style="background-image:url('../imagenes/topsealer/background/topsealer_fondo_07.jpg');"
 						data-img-width="1920" data-img-height="1080" data-diff="100">
@@ -301,23 +301,23 @@
 					<div class="contenedorMenuOculto">
 						<div class="contenedorMagenDerecha"
 							data-animate-scroll='{"x": "-100","y": "0","alpha": "0","duration": "1"}'>
-							<p class="en2">¿Qué
-								es Topsealer? </p>
+							<h1 class="en2">Barnices poliuretano Topsealer</h1>
 
 							<div class="text-justify">
 								<p>
 									<h2 class="h2s">Topsealer</h2>
-									<h3 class="h3s">es la línea de selladores. Se utiliza en el paso final de
-										la aplicación del microcemento. Ofrece múltiples opciones de sellado, según el
-										tipo
-										de aplicación y el acabado que se quiera obtener.</h3>
+									<h3 class="h3s">es la línea de barnices de poliuretano de Topciment. Un producto que
+										se utiliza en el paso final de la aplicación de microcemento para la protección
+										de superficies.</h3>
 								</p>
 								<p>
-									La función de los selladores en el proceso de aplicación es clave. De ellos depende
-									tanto el resultado final como el cuidado y mantenimiento del microcemento. Una de
-									sus funciones es otorgar a la superficie el acabado deseado y proteger el
-									microcemento de productos de limpieza agresivos, del agua y de la luz solar o
-									ultravioleta. </p>
+									Este sellador poliuretano destaca por sus elevadas resistencias mecánicas y químicas
+									a la abrasión, al agua, al rayado, a las manchas, a la luz solar y ultravioleta o a
+									los productos de limpieza agresivos, entre otros.</p>
+								<p>Las opciones de sellado de Topsealer son infinitas según el tipo de aplicación y
+									acabado que se quiera obtener. Este barniz poliuretano, que puede aplicarse tanto en
+									superficies interiores como exteriores, es capaz de crear espacios antideslizantes e
+									impermeables.</p>
 
 							</div>
 						</div>
@@ -589,7 +589,7 @@
 					</div>
 					<!-- Propiedades -->
 					<p class="en3" data-animate-scroll='{"x": "-100","y": "0","alpha": "0","duration": "1"}'>
-						? Características técnicas</p>
+						Características técnicas</p>
 					<div class="row">
 						<div class="col-6">
 							<div class="row">
@@ -642,12 +642,12 @@
 					</div>
 					<!-- Rendimiento -->
 					<p class="en3" data-animate-scroll='{"x": "-100","y": "0","alpha": "0","duration": "1"}'>
-						? Rendimiento</p>
+						Rendimiento</p>
 					<p><span>Topsealer WT Anti Slip (2 manos) - 0,12 L/m²
 						</span></p>
 					<!-- Presentación -->
 					<p class="en3" data-animate-scroll='{"x": "-100","y": "0","alpha": "0","duration": "1"}'>
-						? Presentación</p>
+						Presentación</p>
 					<p>Topsealer WT Anti Slip se presenta en garrafas de 5 L (Componente A) + botella de 1 L (Componente
 						B)
 					</p>
@@ -753,7 +753,7 @@
 					<!-- Rendimiento -->
 					<p class="en3" data-animate-scroll='{"x": "-100","y": "0","alpha": "0","duration": "1"}'>
 						Rendimiento</p>
-					<p><span>Topsealer Pro+ Fast: Una mano de  150 g/m².
+					<p><span>Topsealer Pro+ Fast: Una mano de 150 g/m².
 						</span></p>
 					<!-- Presentación -->
 					<p class="en3" data-animate-scroll='{"x": "-100","y": "0","alpha": "0","duration": "1"}'>
@@ -789,7 +789,8 @@
 						</div>
 						<!-- descripcion -->
 						<div class="col-md-6">
-							<p> <h2 class="h2s">Topsealer DSV</h2>
+							<p>
+								<h2 class="h2s">Topsealer DSV</h2>
 								<h3 class="h3s">de Topciment® es un poliuretano
 									acrílico de dos componentes (A+B) al disolvente.</h3>
 							</p>
