--- a/en/professionals/methods-application-microcement.html
+++ b/en/professionals/methods-application-microcement.html
@@ -41,11 +41,9 @@
     <link rel="alternate" href="https://www.topciment.cn/updates-and-news.html" hreflang="zh-CN" />
 
 
-    <title>Maintenance and cleaning of microcement coatings</title>
+    <title>Methods of application of microcement : How to apply microcement</title>
     <meta name="description"
-        content="Protective waxes and cleaners for the good maintenance and cleaning of microcement coatings." />
-
-
+        content="Learn about the application methods of microcement. With our advice you will learn how to apply microcement on walls, floors, pools and exteriors." />
 
     <style type="text/css">
         div.ocultable {
@@ -164,9 +162,9 @@
                 <div class="menu botones" style="margin-left:100px">
                     <ul>
                         <li><a href="../microcement.html">Microcement</a></li>
-                        <li><a class="activo" href="../systems.html">Systems</a></li>
+                        <li><a href="../systems.html">Systems</a></li>
                         <li><a href="../gallery.html">Gallery</a></li>
-                        <li><a href="../professionals.html">Professionals</a></li>
+                        <li><a class="activo" href="../professionals.html">Professionals</a></li>
                         <li><a href="../news.html">News</a></li>
                         <li><a href="../contact.html">Contact</a></li>
                     </ul>
@@ -201,7 +199,7 @@
                     <li>
                         <a href="#up" style="font-size:26px">Methods of application</a>
                     </li>
-                  
+
                 </ul>
             </div>
 
@@ -251,66 +249,65 @@
     </div>
 
 
- 
+
     <div id="main">
-     <div class=" clearfix">
-       <div id="content">
-         <section id="up">
-           <div class="fullscreen background parallax"
-             style="background-image:url('../../imagenes/metodos-de-aplicacion-de-microcemento.JPG');" data-img-width="4000"
-             data-img-height="3000" data-diff="100">
-             <div class="content-a">
-             </div>
-           </div><a id="profesionales-microcemento"
-             style="display: block;height: 50px;margin-top: -50px;visibility: hidden;"></a>
+        <div class=" clearfix">
+            <div id="content">
+                <section id="up">
+                    <div class="fullscreen background parallax"
+                        style="background-image:url('../../imagenes/metodos-de-aplicacion-de-microcemento.JPG');"
+                        data-img-width="4000" data-img-height="3000" data-diff="100">
+                        <div class="content-a">
+                        </div>
+                    </div><a id="profesionales-microcemento"
+                        style="display: block;height: 50px;margin-top: -50px;visibility: hidden;"></a>
 
-           <div class="contenedorMenuOculto">
-             <div class="contenedorMagenDerecha">
-               <h1 class="en2">Métodos para la aplicación de microcemento</h1>
+                    <div class="contenedorMenuOculto">
+                        <div class="contenedorMagenDerecha">
+                            <h1 class="en2">Methods and tips for microcement application</h1>
 
-               <p>En esta sección exclusiva para profesionales del microcemento, encontrarás múltiples consejos de
-                 nuestro equipo de expertos sobre cómo aplicar microcemento en paredes, suelos, interiores, exteriores y
-                 piscinas.</p>
+                            <p>In this exclusive section for professionals of microcement, you will find multiple
+                                advices from our team of experts on how to apply microcement in walls, floors,
+                                interiors, exteriors and swimming pools.</p>
 
-               <p>Aprenderás qué tipo de microcemento es el más apropiado según la superficie a recubrir y el material
-                 existente, así como las herramientas específicas que necesitas para un óptimo resultado: espátulas,
-                 llanas, rodillos, etc.</p>
+                            <p>You will learn which type of microcement is the most appropriate according to the surface
+                                to be coated and the existing material, as well as the specific tools you need for an
+                                optimal result: spatulas, trowels, rollers, etc.</p>
 
-               <P>En este apartado hallarás también las distintas técnicas de aplicación de microcemento que existen en
-                 función del acabado que se busque conseguir. Y es que el microcemento es un revestimiento que ofrece
-                 múltiples posibilidades decorativas.</P>
+                            <P>In this area you will also find the different techniques for applying microcement
+                                depending on the finish you are looking for. Microcement is a coating that offers
+                                multiple decorative possibilities.</P>
 
-               <p>Conoce todos los métodos de aplicación de microcemento, paso a paso, y presta atención a nuestros
-                 consejos para evitar la aparición de manchas u otro tipo de marcas. Contamos con videotutoriales.</p>
-               <p> Aplicación del <strong><a class="links" href="../microcementos.html">microcemento</a></strong> paso a
-                 paso:</p>
-               <ul class="marginLeft50px">
-                 <li><a class="links" href="../aplicacion-microcemento/generalidades-metodos-planificacion.html"
-                     target="_self">Generalidades de la aplicación</a></li>
-                 <li><a class="links"
-                     href="../aplicacion-microcemento/condiciones-previas-a-la-aplicacion-y-preparacion-del-soporte.html"
-                     target="_self">Condiciones previas a la aplicación y preparación del soporte</a></li>
-                 <li><a class="links"
-                     href="../aplicacion-microcemento/mezcla-del-microcemento-monocomponente-y-bicomponente.html"
-                     target="_self">Mezcla del microcemento monocomponente y bicomponente</a></li>
-                 <li><a class="links"
-                     href="../aplicacion-microcemento/aplicacion-de-microcemento-de-preparacion-y-de-acabado.html"
-                     target="_self">Aplicación de microcemento de preparación y de acabado</a></li>
-                 <li><a class="links" href="../aplicacion-microcemento/aplicacion-del-sellador.html"
-                     target="_self">Aplicación del
-                     sellador</a></li>
-                 <li><a class="links" href="../aplicacion-microcemento/diferentes-efectos-en-el-acabado.html"
-                     target="_self">Diferentes
-                     efectos en el acabado</a></li>
-                 <li><a class="links"
-                     href="../aplicacion-microcemento/como-evitar-manchas-o-marcas-no-deseadas-al-aplicar-microcemento.html"
-                     target="_self">Cómo evitar manchas o marcas no deseadas al aplicar microcemento</a></li>
-               </ul>
-             </div>
-           </div>
-       </div>
-     </div>
-   </div>
+                            <p>Learn more about all the methods of applying microcement, step by step, and pay attention
+                                to our advice to avoid the appearance of stains or other types of marks. We have video
+                                tutorials.</p>
+
+                            <p>Step by step application of the <a href="../microcement.html">microcement</a>: </p>
+                            <ul class="marginLeft50px">
+                                <li><a class="links" href="applicators-corner/general-points-of-the-application.html"
+                                        target="_self">General Points of the Application</a></li>
+                                <li><a class="links" href="applicators-corner/conditions-prior-preparation-of-the-support-and-application.html"
+                                        target="_self">Conditions prior preparation of the support and application</a>
+                                </li>
+                                <li><a class="links" href="applicators-corner/mixture-of-single-component-and-bi-component-microcement.html"
+                                        target="_self">Mixture of bi-component microcement</a></li>
+                                <li><a class="links" href="applicators-corner/application-of-preparation-microcement-and-finish-microcement.html"
+                                        target="_self">Application of Preparation Microcement and Finish Microcement</a>
+                                </li>
+                                <li><a class="links" href="applicators-corner/sealant-application.html" target="_self">Sealant
+                                        Application</a></li>
+                                <li><a class="links" href="applicators-corner/the-different-effects-of-the-finish.html"
+                                        target="_self">The different
+                                        effects of the finish</a></li>
+                                <li><a class="links" href="applicators-corner/how-to-avoid-unwanted-stains-or-marks-when-applying-microcement.html"
+                                        target="_self">How to avoid unwanted stains or marks when applying
+                                        Microcement</a></li>
+                            </ul>
+                        </div>
+                    </div> 
+            </div>
+        </div>
+    </div>
 
     <footer class="footerp">
         <div class="contenedorMenuOculto contenedorF">
