--- a/fr/nouvelles.html
+++ b/fr/nouvelles.html
@@ -306,6 +306,67 @@
 						<div class="col-md-12 pr-0 pl-0 mb-5">
 							<div class="card" style="border:none;">
 								<h5 class="card-header"> <a
+										href="nouvelles/salles-de-bains-en-beton-cire-seront-une-tendance.html">6 raisons pour lesquelles les salles de bains en béton ciré seront une tendance en 2021</a> <span
+										class="float-right clocki"><i class="fa fa-clock-o mr-2"></i>2/11/2020</span>
+								</h5>
+								<div class="card-body">
+									<div class="paragraphs">
+										<div class="row">
+											<div class="span4">
+												<div class="clearfix content-heading">
+													<img class="pull-left mr-3"
+														src="../imagenes/news/topciment-pared-lavabo-baño-USA-portada.jpg"
+														height="auto" />
+													<p>Si vous envisagez de rénover ou d'agrandir la salle de bain dans les mois à venir, cet article est pour vous. Les salles de bain en béton ciré , enduit décoratif de haute performance, seront une tendance en 2021. <br>
+													</p>
+													<a href="nouvelles/salles-de-bains-en-beton-cire-seront-une-tendance.html"
+														class="btn float-right btn-primary leermass mt-2">Lire la suite</a>
+												</div>
+
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-12 pr-0 pl-0 mb-5">
+							<div class="card" style="border:none;">
+								<h5 class="card-header"> <a
+										href="nouvelles/8-raisons-lesquelles-beton-cire-est-lavenir-des--renovation.html">8
+										raisons pour lesquelles le béton ciré est l'avenir
+										des rénovations</a> <span class="float-right clocki"><i
+											class="fa fa-clock-o mr-2  "></i>13/10/2020</span>
+								</h5>
+								<div class="card-body">
+									<div class="paragraphs">
+										<div class="row">
+											<div class="span4">
+												<div class="clearfix content-heading">
+													<img class="pull-left mr-3"
+														src="../imagenes/news/Topciment Shkaf 2 -header.jpg"
+														height="auto" />
+													<p>Le béton ciré est le revêtement décoratif du présent
+														, mais surtout du futur, car ses multiples avantages par rapport
+														aux autres matériaux le rendent idéal
+														pour créer toutes sortes d'espaces et de styles.
+
+														Nous vous expliquons ici les principaux avantages du microciment
+														qui vous feront tomber amoureux et avec lequel vous réaliserez
+														la maison de vos rêves.<br>
+													</p>
+													<a href="nouvelles/8-raisons-lesquelles-beton-cire-est-lavenir-des--renovation.html"
+														class="btn float-right btn-primary leermass mt-2">Lire la
+														suite</a>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-12 pr-0 pl-0 mb-5">
+							<div class="card" style="border:none;">
+								<h5 class="card-header"> <a
 										href="nouvelles/piscines-en-beton-cire-milleure-option-possible.html">Piscines
 										en béton ciré, la meilleure option possible</a> <span
 										class="float-right clocki"><i class="fa fa-clock-o mr-2  "></i>2/10/2020</span>
