--- a/profesionales.html
+++ b/profesionales.html
@@ -257,7 +257,7 @@
        <div id="content">
          <section id="up">
            <div class="fullscreen background parallax fotoprofesionales"
-             style="background-image:url('imagenes/profesionales/servicios-profesionales.jpg');" data-img-width="1920"
+             style="background-image:url('imagenes/profesionales/Profesionales-microcemento-Topciment.jpg');" data-img-width="1920"
              data-img-height="1440" data-diff="100">
              <div class="content-a">
              </div>
@@ -287,8 +287,10 @@
                <div class="row">
                  <div class="col-md-12">
                    <a id="servicio" style="display: block;height: 20px;margin-top: -20px;visibility: hidden;"></a>
-                   <h2 class="en4 card-header mb-4"> <img src="imagenes/iconos/servicio.png" class="img-fluid "> <a
-                       class="" href="contacto.html"> Servicio técnico
+                   <h2 class="en4 card-header mb-4"> <img src="imagenes/iconos/Logo-servicio-tecnico.png" alt="Logo Servicio técnico de microcemento Topciment"
+                    title="Logo Servicio técnico de microcemento Topciment"
+                    class="img-fluid "> <a
+                        href="contacto.html"> Servicio técnico
                        especializado</a> </h2>
                    <p>
                      Disponible en varios idiomas, nuestros técnicos comerciales asesoran y resuelven cualquier duda que
@@ -300,8 +302,10 @@
                  </div>
                  <div class="col-md-12">
                    <a id="cursos" style="display: block;height: 20px;margin-top: -20px;visibility: hidden;"></a>
-                   <h2 class="en4 card-header"> <img src="imagenes/iconos/cursos.png" class="img-fluid "> <a class=""
-                       href="profesionales/cursos-aplicacion-microcemento.html">Cursos de microcemento</a>
+                   <h2 class="en4 card-header"> <img src="imagenes/iconos/Logo-cursos-microcemento.png" alt="Logo cursos de aplicación de microcemento homologados Topciment"
+                    title="Logo cursos de aplicación de microcemento homologados Topciment" class="img-fluid ">
+                    
+                    <a href="profesionales/cursos-aplicacion-microcemento.html">Cursos de microcemento</a>
                    </h2>
                    <p>
                      Con el fin de garantizar el mejor resultado posible en la aplicación de nuestros revestimientos
@@ -328,8 +332,9 @@
                  </style>
                  <div class="col-md-12">
                    <a id="distribuidores" style="display: block;height: 20px;margin-top: -20px;visibility: hidden;"></a>
-                   <h2 class="en4 card-header"> <img src="imagenes/iconos/distribuidor.png" class="img-fluid "> <a
-                       class="" href="distribuidores.html">Distribuidores de
+                   <h2 class="en4 card-header"> <img src="imagenes/iconos/Logo-distribuidores-microcemento.png"
+                    alt="Logo distribuidores microcemento Topciment" title="Logo distribuidores microcemento Topciment" class="img-fluid ">
+                     <a href="distribuidores.html">Distribuidores de
                        microcemento</a>
                    </h2>
                    <p>
@@ -341,8 +346,10 @@
                  </div>
                  <div class="col-md-12">
                    <a id="metodos" style="display: block;height: 20px;margin-top: -20px;visibility: hidden;"></a>
-                   <h2 class="en4 card-header"> <img src="imagenes/iconos/aplicacion.png" class="img-fluid "> <a
-                       class="" href="profesionales/metodos-de-aplicacion-microcemento.html">Métodos de aplicación
+                   <h2 class="en4 card-header"> <img src="imagenes/iconos/Logo-metodos-aplicacion-microcemento.png" 
+                    alt="Logo métodos de aplicación de microcemento Topciment	" title="Logo métodos de aplicación de microcemento Topciment	"
+                    class="img-fluid "> <a
+                        href="profesionales/metodos-de-aplicacion-microcemento.html">Métodos de aplicación
                        de microcemento</a>
                    </h2>
                    <p>
@@ -353,9 +360,10 @@
                          aplicación</strong></a></p>
                  </div>
                  <div class="col-md-12">
-                   <a id="calculadora" style="display: block;height: 20px;margin-top: -20px;visibility: hidden;"></a>
-                   <h2 class="en4 card-header"> <img src="imagenes/iconos/calculadora.png" class="img-fluid "> <a
-                       class="" href="calc/index.html">Calculadora material
+                   <a id="calculadora" style="display: block;height: 20px;margin-top: -20px;visibility: hidden;"></a> d
+                   <h2 class="en4 card-header"> <img src="imagenes/iconos/Logo-calculadora-material microcemento.png"
+                    alt="Logo calculadora material de microcemento Topciment" title="Logo calculadora material de microcemento Topciment"  class="img-fluid "> <a
+                        href="calc/index.html">Calculadora material
                        microcemento</a>
                    </h2>
                    <p>
@@ -366,11 +374,12 @@
                    </p>
                    <p> <i class="fa fa-arrow-circle-right"></i> <a class="links" href="calc/index.html">
                        <strong>Calcular material</strong></a></p>
-                 </div>
+                 </div> a
                  <div class="col-md-12">
                    <a id="fichas" style="display: block;height: 20px;margin-top: -20px;visibility: hidden;"></a>
-                   <h2 class="en4 card-header"> <img src="imagenes/iconos/catalogue.png" class="img-fluid "> <a class=""
-                       href="descargas.html#fichas-tecnicas-topciment">Fichas técnicas</a>
+                   <h2 class="en4 card-header"> <img src="imagenes/iconos/Logo-fichas-tecnicas.png" 
+                    alt="Logo fichas técnicas microcemento Topciment" title="Logo fichas técnicas microcemento Topciment"
+                    class="img-fluid "> <a href="descargas.html#fichas-tecnicas-topciment">Fichas técnicas</a>
                    </h2>
                    <p>
                      Facilitamos las fichas técnicas de todos nuestros productos. Así, los profesionales pueden
