--- a/profesionales/cursos-aplicacion-microcemento.html
+++ b/profesionales/cursos-aplicacion-microcemento.html
@@ -25,8 +25,8 @@
       <link rel="stylesheet" type="text/css" href="../css/restyle.css">
       <script type='text/javascript' src='../js/mycode.js'></script>
 
- 
- 
+
+
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
       <link rel="stylesheet" type="text/css"
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
@@ -37,17 +37,22 @@
           content="Tu futuro profesional nos importa. En Topciment te formamos con varios cursos de aplicación de microcemento, barnices y pinturas metálicas." />
 
 
-          <meta property="og:title" content="Formación Topciment | Cursos de aplicación de microcemento">
-    <meta property="og:site_name" content="Topciment">
-    <meta property="og:url" content="https://www.topciment.com/profesionales/cursos-aplicacion-microcemento.html">
-    <meta property="og:description"
-        content="Tu futuro profesional nos importa. En Topciment te formamos con varios cursos de aplicación de microcemento, barnices y pinturas metálicas.">
-    <meta property="og:type" content="article">
-    <meta property="og:image" content="https://www.topciment.com/imagenes/profesionales/cursos%20de%20aplicacion%20de%20microcemento.jpg">
-    <meta property="og:image" content="https://www.topciment.com/imagenes/profesionales/cursos%20de%20aplicacion%20de%20microcemento.jpg">
-    <meta property="og:image" content="https://www.topciment.com/imagenes/profesionales/cursos%20de%20aplicacion%20de%20microcemento.jpg">
-    <meta property="og:image" content="https://www.topciment.com/imagenes/profesionales/cursos%20de%20aplicacion%20de%20microcemento.jpg">
-    <meta property="og:image" content="https://www.topciment.com/imagenes/profesionales/cursos%20de%20aplicacion%20de%20microcemento.jpg">
+      <meta property="og:title" content="Formación Topciment | Cursos de aplicación de microcemento">
+      <meta property="og:site_name" content="Topciment">
+      <meta property="og:url" content="https://www.topciment.com/profesionales/cursos-aplicacion-microcemento.html">
+      <meta property="og:description"
+          content="Tu futuro profesional nos importa. En Topciment te formamos con varios cursos de aplicación de microcemento, barnices y pinturas metálicas.">
+      <meta property="og:type" content="article">
+      <meta property="og:image"
+          content="https://www.topciment.com/imagenes/profesionales/cursos%20de%20aplicacion%20de%20microcemento.jpg">
+      <meta property="og:image"
+          content="https://www.topciment.com/imagenes/profesionales/cursos%20de%20aplicacion%20de%20microcemento.jpg">
+      <meta property="og:image"
+          content="https://www.topciment.com/imagenes/profesionales/cursos%20de%20aplicacion%20de%20microcemento.jpg">
+      <meta property="og:image"
+          content="https://www.topciment.com/imagenes/profesionales/cursos%20de%20aplicacion%20de%20microcemento.jpg">
+      <meta property="og:image"
+          content="https://www.topciment.com/imagenes/profesionales/cursos%20de%20aplicacion%20de%20microcemento.jpg">
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
       <link rel="canonical" href="https://www.topciment.com/profesionales.html" />
@@ -274,6 +279,7 @@
                   </ul>
               </div>
           </div>
+
           <div id="cerrarEquis"><a href="#menu"
                   style="text-decoration:none; color:#000; font-size:30px; font-weight:100"
                   onclick="ocultarmovil()"><img src="../imagenes//equis-cerrar.png" width="28" height="28"
@@ -284,7 +290,7 @@
               <div id="content">
                   <section id="up">
                       <div class="fullscreen background parallax altoMovil fotocursos"
-                          style="background-image:url('../imagenes/profesionales/cursos de aplicacion de microcemento.jpg'); "
+                          style="background-image:url('../imagenes/profesionales/Cursos-aplicación-de-microcemento-Topciment.jpg'); "
                           data-img-width="1920" data-img-height="1080" data-diff="100">
                       </div>
                       <a id="invertimos-en-tu-futuro"
@@ -748,58 +754,58 @@
                                                           }
 
                                                           .fondocurso1 {
-                                                              background-image: url('../imagenes/cursos/curso_de_iniciacion.jpg');
+                                                              background-image: url('../imagenes/cursos/Cursos-microcemento-Topciment.jpg');
                                                               background-size: cover;
                                                           }
 
                                                           .fondocurso2 {
-                                                              background-image: url('../imagenes/cursos/curso_avanzado.jpg');
+                                                              background-image: url('../imagenes/cursos/Cursos-tecnicas-aplicacion-microcemento-Topcimet.jpg');
                                                               background-size: cover;
                                                           }
 
                                                           .fondocurso3 {
-                                                              background-image: url('../imagenes/cursos/curso_selladores.jpg');
+                                                              background-image: url('../imagenes/cursos/Cursos-barnices-Topciment.jpg');
                                                               background-size: cover;
                                                           }
 
                                                           .fondocurso4 {
-                                                              background-image: url('../imagenes/cursos/curso acabados decorativos.png');
+                                                              background-image: url('../imagenes/cursos/Cursos-revestimientos-metalicos-Topciment.png');
                                                               background-size: cover;
                                                           }
 
                                                           .fondocurso5 {
-                                                              background-image: url('../imagenes/cursos/curso a la carta.JPG');
+                                                              background-image: url('../imagenes/cursos/Cursos-microcemento-a-la-carta-Topciment.JPG');
                                                               background-size: cover;
                                                           }
 
                                                           .fondocurso6 {
-                                                              background-image: url('../imagenes/cursos/curso_presencial.JPG');
+                                                              background-image: url('../imagenes/cursos/Cursos-microcemento-presenciales-Topciment.JPG');
                                                               background-size: cover;
                                                           }
 
                                                           .fondocurso7 {
 
-                                                              background-image: url('../imagenes/cursos/videotutoriales.jpeg');
+                                                              background-image: url('../imagenes/cursos/Videotutoriales-aplicacion-microcemento-Topciment.jpeg');
                                                               background-size: cover;
                                                           }
 
                                                           .fondocurso8 {
-                                                              background-image: url('../imagenes/cursos/curso_online.jpeg');
+                                                              background-image: url('../imagenes/cursos/Cursos-microcemento-online-Topciment.jpeg');
                                                               background-size: cover;
                                                           }
 
                                                           .fondocurso9 {
-                                                              background-image: url('../imagenes/cursos/P1060179.JPG');
+                                                              background-image: url('../imagenes/cursos/Cursos-microcemento-para-piscinas-Topciment.JPG');
                                                               background-size: cover;
                                                           }
 
                                                           .fondocurso10 {
-                                                              background-image: url('../imagenes/cursos/texturas-microcemento.JPG');
+                                                              background-image: url('../imagenes/cursos/Cursos-texturas-recubrimientos-Topciment.JPG');
                                                               background-size: cover;
                                                           }
 
                                                           .fondocurso11 {
-                                                              background-image: url('../imagenes/cursos/IMG_0157.JPG');
+                                                              background-image: url('../imagenes/cursos/Cursos-microcemento-en-obra-Topciment.JPG');
                                                               background-size: cover;
                                                           }
 
@@ -835,17 +841,17 @@
                                                               <div class="row people">
                                                                   <div
                                                                       class="col-md-6 col-lg-4 item shadow-sm fondomaestro rounded">
-                                                                      <div class="box"><img class="rounded-circle"
-                                                                              src="../imagenes//cursos/Cédric Vichard. FullMetal.jpg">
+                                                                      <div class="box"><img class="rounded-circle" alt="Formador Cédric Vichard curso revestimientos metálicos Topciment" 
+                                                                        title="Formador Cédric Vichard curso revestimientos metálicos Topciment	" src="../imagenes/cursos/Formador-Cedric-Vichard.jpg">
 
                                                                           <p class="en4 mt-3">
                                                                               Cédric Vichard
                                                                           </p>
-                                                                          <p class="description ">
+                                                                          <p class="description">
                                                                               Mucho más que un maestro aplicador,
                                                                               Vichard es un artista suizo reputado con
                                                                               el que los productos adquieren otra
-                                                                              dimensión si pasan por sus manos.
+                                                                                 dimensión si pasan por sus manos.
                                                                               Especialista en el recubrimiento con
                                                                               pinturas metálicas y óxidos, es capaz de
                                                                               revestir
@@ -857,7 +863,7 @@
                                                                   <div
                                                                       class="col-md-6 col-lg-4 item shadow-sm fondomaestro rounded">
                                                                       <div class="box"><img class="rounded-circle"
-                                                                              src="../imagenes//cursos/joge.jpg">
+                                                                              src="../imagenes/cursos/Formador-Jorge-Coimbra.jpg">
                                                                           <!-- <h3 class="name">Jorge Coimbra</h3> -->
                                                                           <p class="en4 mt-3 ">
                                                                               Jorge Coimbra
@@ -876,7 +882,7 @@
                                                                   <div
                                                                       class="col-md-6 col-lg-4 item shadow-sm fondomaestro rounded">
                                                                       <div class="box"><img class="rounded-circle"
-                                                                              src="../imagenes//cursos/Cesar.jpg">
+                                                                              src="../imagenes/cursos/Formador-Cesar-Orellana.jpg">
 
                                                                           <p class="en4 mt-3">
                                                                               César Orellana
@@ -1124,6 +1130,7 @@ background-color:#eef4f7; */
 
                                       </div>
                                   </div>
+
 
                                   <!-- START Footer -->
                                   <footer class="footerp">
