--- a/descargas.html
+++ b/descargas.html
@@ -488,9 +488,7 @@
                     formamos
                     parte. Gracias a nuestro espíritu innovador centrado en la investigación constante, este catálogo se
                     convierte
-                    en algo vivo y en constante renovación. ¡Disfrútalo! . <strong><a
-                            href="https://www.topciment.com/documento/catalogo-topciment-es.pdf">Descargar
-                            PDF</a></strong> (5 Mb)</p>
+                    en algo vivo y en constante renovación. ¡Disfrútalo! .</p>
                 <div class="row  container-fluid ">
                     <div class="col-md-12">
                         <div class="iframe text-center">
