--- a/profesionales.html
+++ b/profesionales.html
@@ -194,7 +194,7 @@
        </div>
      </div>
 
-     <div class="contenedorMenuOculto">
+     <div class="container">
        <div id="sidebar" class="menuOculto menuMicrocementos stick">
          <ul>
            <li><a href="#up" style="font-size:26px">Profesionales</a></li>
@@ -270,7 +270,7 @@
                 background-position: 50% -137.328px !important;
                }
             </style>
-           <div class="contenedorMenuOculto">
+           <div class="container">
              <div class="contenedorMagenDerecha">
                <a id="que-ofrecemos" style="display: block;height: 50px;margin-top: -50px;visibility: hidden;"></a>
                <h1 class="en2">¿Qué ofrecemos a los profesionales?</h1>
@@ -388,7 +388,7 @@
 
    <!-- START Footer -->
    <footer class="footerp">
-     <div class="contenedorMenuOculto contenedorF">
+     <div class="container contenedorF">
        <div class="row row1">
          <div class="col-md-3 col1F">
            <h6 class="tituloF productosF"><strong>PRODUCTOS</strong></h6>
