--- a/sistemas/sttandard-microcemento-bicomponente.html
+++ b/sistemas/sttandard-microcemento-bicomponente.html
@@ -594,14 +594,14 @@
 						Rendimiento
 					</p>
 					<div class="row">
-						<div class="col-md-12"><span><strong>Sttandard Microfino XS</strong> (2
+						<div class="col-md-12"><span><strong>Sttandard Microfino XS/S/M</strong> (2
 								manos)- 0,50 Kg/m2</span></div>
 					</div>
 					<!-- Presentación -->
 					<p class="en3" data-animate-scroll='{"x": "-100","y": "0","alpha": "0","duration": "1"}'>
 						Presentación</p>
 					<p>Todos los tipos de <strong>Sttandard Microfino</strong> se presentan en cubos
-						cónicos de plástico negro de 10 y 20 Kg.</p>
+						cónicos de plástico negro de 15 y 20 Kg.</p>
 				</div>
 			</div>
 		</section>
