--- a/sistemas/unlimitted.html
+++ b/sistemas/unlimitted.html
@@ -374,12 +374,12 @@
                             <p>Puede usarse como microcemento de terminación gracias a su acabado rústico.</p>
                             <p>Unlimitted Microbase está disponible en 3 granulometrías: L, XL, XXL.</p>
 
-                            <!--    <a class="links" href="../fichas-tecnicas/Unlimitted_MicrobaseBI-ES.pdf" target="_blank"
+                            <a class="links" href="../fichas-tecnicas/Unlimitted_MicrobaseBI-ES.pdf" target="_blank"
                                 style="font-weight: 700;"> <span class="fa-stack">
                                     <i class="fa fa-file-pdf-o fa-stack-1x"></i>
                                 </span>Descarga aquí la ficha técnica de
                                 Unlimitted Microbase
-                            </a> -->
+                            </a>
                         </div>
                     </div>
                     <!-- Tipos de cubos -->
@@ -520,12 +520,12 @@
                             <p>Unlimitted Microdeck S ofrece acabados muchísimos más suaves y uniformes que Unlimitted
                                 Microdeck M. Seca más despacio y se deja repasar. </p>
 
-                            <!--   <a class="links" href="../fichas-tecnicas/Unlimitted_MicrodeckBI-ES.pdf" target="_blank"
+                              <a class="links" href="../fichas-tecnicas/Unlimitted_MicrodeckBI-ES.pdf" target="_blank"
                                 style="font-weight: 700;"> <span class="fa-stack">
                                     <i class="fa fa-file-pdf-o fa-stack-1x"></i>
                                 </span>Descarga aquí la ficha técnica de
                                 Unlimitted Microdeck
-                            </a> -->
+                            </a> 
                         </div>
                     </div>
                     <!-- Tipos de cubos  -->
